[package]
name = "room-dds-bridge"
version = "0.1.0"
edition = "2024"
description = "Auto-configure DDS domains from ternary-mud room topology"
license = "MIT"
repository = "https://github.com/SuperInstance/room-dds-bridge"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
